--- a/TaskLogSystem/packages.config
+++ b/TaskLogSystem/packages.config
@@ -26,6 +26,8 @@
   <package id="NLog" version="5.3.2" targetFramework="net472" />
   <package id="NLog.Extensions.Logging" version="5.3.11" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Linq.Dynamic" version="1.0.8" targetFramework="net472" />
+  <package id="System.Linq.Dynamic.Core" version="1.3.14" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
